--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     ],
     "license": "MIT",
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "illuminate/routing": "^7.0|^8.0|^9.0|^10.0"
+    },
     "extra": {
         "laravel": {
             "providers": [
